Added  content to my about page

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,9 @@
       <header class="header" id="header">
         <div class="header__content">
           <h4 class="heading--4 mb-3">Hi I'm a Front-End Developer</h4>
-          <h1 class="heading--1">I Make Good Stuffs With The Web</h1>
-          <p class="paragraph mt-1 paragraph--hero"> I'm a developer based in the philippines. I love to create web
-            applications with elegant design that provide solutions to many people's problem </p>
+          <h1 class="heading--1">I Make Good Stuffs for The Web</h1>
+          <p class="paragraph mt-1 paragraph--hero"> I'm a developer based in the Philippines. I specialize in Front-End
+            development on building exceptionally elegant websites that provides an easy experience for the users. </p>
         </div>
         <button class="btn btn--outline">
           <a href="#projects" title="Link to go to project section"> See my Works</a>
@@ -65,17 +65,14 @@
         <h2 class="heading--2">About me</h2>
 
         <article class="about__description">
-          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Montes, enim egestas mattis
-            velit
-            sit. Interdum duis euismod sed ultricies orci enim volutpat. Dignissim etiam consectetur ultricies tellus
-            vestibulum vitae. Faucibus turpis mattis tortor metus, et.i enim volutpat. Dignissim etiam consectetur
-            ultricies tellus vestibulum vitae. Faucibus turpis mattis tortor metus, et.</p>
+          <p class="paragraph">Hellooo, my name's Jude Patarick Ellery L. Tejada, I know its a long name but you can
+            call
+            me Jude for short, I live in the Phillipines and I am currently a Senior high student. I love taking
+            challenges that pushes me outside of my comfort zone. </p>
           <br><br>
-          <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Montes, enim egestas mattis
-            velit
-            sit. Interdum duis euismod sed ultricies orci enim volutpat. Dignissim etiam consectetur ultricies tellus
-            vestibulum vitae. Faucibus turpis mattis tortor metus, et.i enim volutpat. Dignissim etiam consectetur
-            ultricies tellus vestibulum vitae. Faucibus turpis mattis tortor metus, et.</p>
+          <p class="paragraph">Currently When I'm not coding, I like to do UI/UX design to improve my overall
+            design skill. I enjoy doing both things as it helps me to create a better experience when building web
+            applications. </p>
 
 
         </article>
