Proofread some text

--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,13 @@
         <h2 class="heading--2">About me</h2>
 
         <article class="about__description">
-          <p class="paragraph">Hellooo, my name's Jude Patarick Ellery L. Tejada, I know its a long name but you can
-            call
-            me Jude for short, I live in the Phillipines and I am currently a Senior high student. I love taking
-            challenges that pushes me outside of my comfort zone. </p>
+          <p class="paragraph"> Hello, my name's Jude Patrick Ellery L. Tejada, I know its a long name but you can call
+            me Jude for short, I live in the Philippines and I am currently a Senior high student. I love taking
+            challenges that push me outside of my comfort zone.</p>
           <br><br>
-          <p class="paragraph">Currently When I'm not coding, I like to do UI/UX design to improve my overall
-            design skill. I enjoy doing both things as it helps me to create a better experience when building web
+          <p class="paragraph">Currently, when I'm not coding, I like to immerse myself in UI/UX design to improve my
+            overall design
+            skill. I enjoy doing both things as it helps me to create a better experience when building web
             applications. </p>
 
 
@@ -176,7 +176,7 @@
 
           <article class="project__content" role="button" tabindex="0">
             <h4 class="heading--4">Findhub</h4>
-            <p class="paragraph">A nicer profile for seeing your github account, you can view your top languages and
+            <p class="paragraph">A nicer profile for seeing your Github account, you can view your top languages and
               most starred in a visualized chart. </p>
 
             <div class="project__btns">
@@ -209,7 +209,7 @@
 
             <div class="smallproject__left" role="button" tabindex="0">
               <h4 class="heading--4">Katie Holmes Website</h4>
-              <p class="paragraph">This is a madeup website that I made, originally this was a redesign of the old
+              <p class="paragraph">This is a made-up website that I made, originally this was a redesign of the old
                 website that I had made last year.</p>
             </div>
 
@@ -247,8 +247,8 @@
 
             <div class="smallproject__left">
               <h4 class="heading--4">Covid-19 Tracker</h4>
-              <p class="paragraph">A web application that get's the global status of the covid-19, you could search for
-                a specific country and results back.</p>
+              <p class="paragraph">A web application that gets the global status of the COVID-19, It uses an API for
+                fetching the data.</p>
             </div>
 
             <div class="smallproject__icon">
@@ -290,16 +290,15 @@
         <h1 class="heading--1 heading--1--contact">Say Hi.</h1>
         <!-- FORM -->
         <article class="contact__detail">
-          <h5 class="heading--5 mb-1">Currently available for freelance work</h5>
-          <p class="paragraph">If you want to get in touch, Don't hesitate to send me an email. I'm Happy to talk about
-            opportunities and taking project. Or if you just want to say hi and ask me some some questions I'll be
-            gladly to answer it. </p>
+          <h5 class="heading--5 mb-1">If you want to get in touch, Don't hesitate to send me a message. I'm happy to
+            talk
+            about opportunities. Or if you just want to say hi and ask me some questions I'll be glad to answer it. </p>
 
-          <button class="btn btn--primary mt-3">
-            <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
-              Get in touch
-            </a>
-          </button>
+            <button class="btn btn--primary mt-3">
+              <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
+                Get in touch
+              </a>
+            </button>
         </article>
       </div>
       </div>
