Adde some fix on the header

--- a/public/index.html
+++ b/public/index.html
@@ -290,15 +290,17 @@
         <h1 class="heading--1 heading--1--contact">Say Hi.</h1>
         <!-- FORM -->
         <article class="contact__detail">
-          <h5 class="heading--5 mb-1">If you want to get in touch, Don't hesitate to send me a message. I'm happy to
+          <h5 class="heading--5 mb-1">I'm availabe for taking projects</h5>
+          <p class="paragraph"> If you want to get in touch, Don't hesitate
+            to send me a message. I'm happy to
             talk
             about opportunities. Or if you just want to say hi and ask me some questions I'll be glad to answer it. </p>
 
-            <button class="btn btn--primary mt-3">
-              <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
-                Get in touch
-              </a>
-            </button>
+          <button class="btn btn--primary mt-3">
+            <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
+              Get in touch
+            </a>
+          </button>
         </article>
       </div>
       </div>
