proofread some content

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
         <div class="header__content">
           <h4 class="heading--4 mb-3">Hi I'm a Front-End Developer</h4>
           <h1 class="heading--1">I Make Good Stuffs for The Web</h1>
-          <p class="paragraph mt-1 paragraph--hero"> I'm a developer based in the Philippines. I specialize in Front-End
+          <p class="paragraph mt-1 paragraph--hero">I specialize in Front-End
             development on building exceptionally elegant websites that provides an easy experience for the users. </p>
         </div>
         <button class="btn btn--outline">
@@ -65,14 +65,12 @@
         <h2 class="heading--2">About me</h2>
 
         <article class="about__description">
-          <p class="paragraph"> Hello, my name's Jude Patrick Ellery L. Tejada, I know its a long name but you can call
-            me Jude for short, I live in the Philippines and I am currently a Senior high student. I love taking
-            challenges that push me outside of my comfort zone.</p>
+          <p class="paragraph"> Hello, I'm Jude Patrick Tejada, I am
+            currently a Senior High School student studying in the Philippines who loves to take on challenges that
+            pushes me outside of my comfort zone..</p>
           <br><br>
-          <p class="paragraph">Currently, when I'm not coding, I like to immerse myself in UI/UX design to improve my
-            overall design
-            skill. I enjoy doing both things as it helps me to create a better experience when building web
-            applications. </p>
+          <p class="paragraph">I like to immerse myself in UI/UX designs to improve my overall designing skills when I'm
+            not coding to further help me create better experiences when building web applications. </p>
 
 
         </article>
@@ -101,8 +99,9 @@
 
           <article class="project__content" role="button" tabindex="0">
             <h4 class="heading--4">Fiddles</h4>
-            <p class="paragraph">A web app that I made with plain JavaScript helping other developers to help them find
-              ideas for their next project.
+            <p class="paragraph">A web application that I made with plain JavaScript to help developers find new ideas
+              for their next project.
+
             </p>
 
             <div class="project__btns">
@@ -140,8 +139,8 @@
 
           <article class="project__content" role="button" tabindex="0">
             <h4 class="heading--4">Movie Library</h4>
-            <p class="paragraph">Web application made with plain JavaScript to search for a movie, you can save a
-              favorite movie and get details about a movie.</p>
+            <p class="paragraph">A Web application made with plain JavaScript that can help you search and save your
+              favorite movies, with provided details.</p>
 
             <div class="project__btns">
               <button class="btn btn--primary mr-1">
@@ -228,8 +227,8 @@
 
             <div class="smallproject__left">
               <h4 class="heading--4">Simpledot</h4>
-              <p class="paragraph">This was a fun website that I made for highlighting the importance of simplicity in a
-                design, it tackles why its important and examples to follow.</p>
+              <p class="paragraph">This was a fun website that I made to highlight the importance of simplicity in a
+                design with given examples for you to follow.</p>
             </div>
 
             <div class="smallproject__icon">
@@ -266,8 +265,8 @@
 
             <div class="smallproject__left">
               <h4 class="heading--4">Lyrics Search</h4>
-              <p class="paragraph">A web application made with Plain JavaScript, you can search for an artist or a song
-                that you love and able to view the lyrics.</p>
+              <p class="paragraph">A web application where you can search your favorite artist and their song lyrics.
+              </p>
             </div>
 
             <div class="smallproject__icon">
@@ -291,10 +290,9 @@
         <!-- FORM -->
         <article class="contact__detail">
           <h5 class="heading--5 mb-1">I'm availabe for taking projects</h5>
-          <p class="paragraph"> If you want to get in touch, Don't hesitate
-            to send me a message. I'm happy to
-            talk
-            about opportunities. Or if you just want to say hi and ask me some questions I'll be glad to answer it. </p>
+          <p class="paragraph"> If If you want to get in touch, don't hesitate to send me a message. I'm open to talk
+            about anything or listen to your unique and creative ideas. And if you just want to say hi and ask me some
+            questions I'll gladly answer it too.</p>
 
           <button class="btn btn--primary mt-3">
             <a href="mailto:judelaurentetejada@gmail.com" target="_blank">
