Fixed some issues on header

--- a/public/index.html
+++ b/public/index.html
@@ -50,11 +50,13 @@
           <h1 class="heading--1">I Make Good Stuffs for The Web</h1>
           <p class="paragraph mt-1 paragraph--hero">I specialize in Front-End
             development on building exceptionally elegant websites that provides an easy experience for the users. </p>
-        </div>
-        <button class="btn btn--outline">
-          <a href="#projects" title="Link to go to project section"> See my Works</a>
 
-        </button>
+          <button class="btn btn--outline">
+            <a href="#projects" title="Link to go to project section"> See my Works</a>
+
+          </button>
+        </div>
+
       </header>
       <!--Container-->
     </div>
@@ -161,7 +163,7 @@
         <section class="project">
           <figure class="project__photo">
             <a href="https://findhub.netlify.app/" target="_blank" title="link to go to findhub live site"
-              `rel="noopener" ` or `rel="noreferrer" `>
+              rel="noopener" rel="noreferrer">
               <picture>
                 <source type="image/webp" srcset="../src/assets/work3.webp">
                 <source type="image/jpeg" srcset="../src/assets/work3.jpg">
