added some seo tags

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
+  <title>Jude Tejada</title>
   <meta name="author" content="Jude Tejada">
-  <meta name="keywords"
-    content="Jude Tejada, front-end developer, UI DESIGNER, ui/ux designer, freelance front-end developer, portfolio, filipino designer, filipino developer">
+  <meta name="keywords" content="Jude Tejada, front-end developer ui/ux designer, freelance front-end developer, portfolio, filipino designer, filipino developer">
   <meta name="description" content="Jude Tejada is a Front End Developer based in the Philippines.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jude Tejada | Front-End Developer</title>
+  <meta name="image" content="https://judetejada.me/src/assets/me.png">
+
+  <meta name="thumbnail" content='https://judetejada.me/src/assets/me.png'>
   <meta property="og:locale" content="tl_PH">
   <meta property="og:site_name" content="Jude Tejada Portfolio">
   <meta property="og:description" content="Jude Tejada is a Front End Developer based in the Philippines.">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="judetejada.me/">
+  <meta property="twitter:title" content="Jude Tejada – Front-End Developer">
+  <meta property="twitter:description" content="Jude Tejada is a Front End Developer based in the Philippines. ">
+  <meta property="twitter:image" content="https://judetejada.me/src/assets/me.png">
+
+  
   <link rel="preload" as="font" type="font" href="../src/fonts/ubuntu-v14-latin-regular.woff2" crossorigin>
   <link rel="preload" as="font" type="font" href="../src/fonts/ubuntu-v14-latin-700.woff2" crossorigin>
 
