fixed a typo on contact

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
   <meta name="thumbnail" content='https://judetejada.me/src/assets/me.png'>
   <meta property="og:locale" content="tl_PH">
-  <meta property="og:site_name" content="Jude Tejada Portfolio">
+  <meta property="og:site_name" content="Jude Tejada">
   <meta property="og:description" content="Jude Tejada is a Front End Developer based in the Philippines.">
 
   <meta property="twitter:card" content="summary_large_image">
@@ -302,7 +302,7 @@
         <!-- FORM -->
         <article class="contact__detail">
           <h5 class="heading--5 mb-1">I'm availabe for taking projects</h5>
-          <p class="paragraph"> If If you want to get in touch, don't hesitate to send me a message. I'm open to talk
+          <p class="paragraph">  If you want to get in touch, don't hesitate to send me a message. I'm open to talk
             about anything or listen to your unique and creative ideas. And if you just want to say hi and ask me some
             questions I'll gladly answer it too.</p>
 
